# imxrt1170_freertos_qt

./: .clangd  .gitignore  MIMXRT1176xxxxx.mex  README.md  __repo__  board.c  board.h  clock_config.c  clock_config.h  dcd.c  pin_mux.c  pin_mux.h  readme.md
.cache/clangd/index/: MIMXRT1176_cm7.h.84861175CEED2198.idx  MIMXRT1176_cm7_features.h.EBE3F49440692CD4.idx  board.c.3D5D0377EC26D684.idx  board.h.DDA7F8315CFD5140.idx  clock_config.c.B7C2DA22FB7FDF2C.idx  clock_config.h.1BC74B89692DC4EC.idx  dcd.c.AC069E217096BA5A.idx  dcd.h.A5CCABAC58766331.idx  deviceinformationexchangeprotocol.pb.c.806FBB847A38756E.idx  deviceinformationexchangeprotocol.pb.h.266B4C2F974DD024.idx  devicelink.cpp.E64F61C62D59CCA5.idx  freertos_hello.c.18E6454CDBFE7AA8.idx  freertosqueue.cpp.C4A6F264ABD0FCA5.idx  fsl_device_registers.h.A10FB2E99E05E9E4.idx  mem-freertos-default.cpp.BD61444623C1AE42.idx  mem-freertos.cpp.25DD1699D22F5DDA.idx  mem_info.cpp.67A9F0E6D584F446.idx  pin_mux.c.609D7D131111376B.idx  pin_mux.h.21BE9D0EC99E9355.idx  platform.cpp.01BBE01C9E29EC94.idx  platform_cache.cpp.1082D504D692FCD9.idx  platform_cache.h.869C990A2611F1C0.idx  platform_clock.c.A9175BF48CDA165E.idx  platform_config.h.A2A1E3BA0E68C808.idx  platform_context.cpp.836A80CE4BAD1E1A.idx  platform_devicelink.cpp.3EA5BD871137078A.idx  platform_display.cpp.D433902FE51156F6.idx  platform_display.h.7AB376AE2D11E2EF.idx  platform_drawing.cpp.EC31F375F7596725.idx  platform_drawing.h.49F1AA91C1204C7B.idx  platform_init.c.905C13F3C090FEA9.idx  platform_irq.c.3CF330C01E48F1A9.idx  platform_irq.h.6C6440B5EDEBB638.idx  platform_layers.cpp.79B95F7362B9D454.idx  platform_layers.h.31E357D320950C8F.idx  (+27 more)
armgcc/: CMakeLists.txt  config.cmake  flags.cmake  ide_overrides.cmake  projectconfig.cmake  qul.cmake
armgcc/board/: peripherals.c  peripherals.c.bak
armgcc/debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  buildfile.txt  cmake_install.cmake  compile_commands.json  freertos_hello.hex  freertos_hello.srec  freertos_hello_cm7.elf.ltrans0.ltrans.su  freertos_hello_cm7.elf.ltrans1.ltrans.su  freertos_hello_cm7.elf.ltrans2.ltrans.su  freertos_hello_cm7.elf.ltrans3.ltrans.su  freertos_hello_cm7.elf.ltrans4.ltrans.su  freertos_hello_cm7.elf.ltrans5.ltrans.su  freertos_hello_cm7.elf.ltrans6.ltrans.su  freertos_hello_cm7.elf.ltrans7.ltrans.su  freertos_hello_cm7.elf.ltrans8.ltrans.su  freertos_hello_cm7.elf.ltrans9.ltrans.su  output.map
armgcc/debug/.cmake/api/v1/reply/: cache-v2-22d1d1b7b73b1c723a57.json  cache-v2-d129fba274ba55a709d9.json  cmakeFiles-v1-0da8aebf8e17fa64fd4e.json  codemodel-v2-60d1111d0fe90f0408c4.json  codemodel-v2-b2c60ffcd1104e4523af.json  index-2024-05-09T09-06-45-0476.json  index-2024-05-15T02-48-30-0002.json  target-freertos_hello_cm7.elf-debug-6c64c8a358b4e9d9c892.json  target-freertos_hello_cm7.elf-debug-868eab3c798c26de2ab5.json
armgcc/release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  buildfile.txt  cmake_install.cmake  compile_commands.json  freertos_hello.hex  freertos_hello.srec  freertos_hello_cm7.elf.ltrans0.ltrans.su  freertos_hello_cm7.elf.ltrans1.ltrans.su  freertos_hello_cm7.elf.ltrans10.ltrans.su  freertos_hello_cm7.elf.ltrans11.ltrans.su  freertos_hello_cm7.elf.ltrans2.ltrans.su  freertos_hello_cm7.elf.ltrans3.ltrans.su  freertos_hello_cm7.elf.ltrans4.ltrans.su  freertos_hello_cm7.elf.ltrans5.ltrans.su  freertos_hello_cm7.elf.ltrans6.ltrans.su  freertos_hello_cm7.elf.ltrans7.ltrans.su  freertos_hello_cm7.elf.ltrans8.ltrans.su  freertos_hello_cm7.elf.ltrans9.ltrans.su
armgcc/release/.cmake/api/v1/reply/: cache-v2-c4ed8a95333b9b49fe2f.json  cmakeFiles-v1-d24dec0267b866bfcbd2.json  codemodel-v2-63d66988fdf0dcf3867b.json  index-2024-05-15T02-28-49-0138.json  target-freertos_hello_cm7.elf-release-dc5b37db54952ee74bbe.json  toolchains-v1-fb39ff54a9974589cb3b.json
platform/CMake/: exporter_settings.json
platform/platform/: CMakeLists.txt  IDE-Import-Instructions.json  IDE-Import-Instructions.txt
platform/platform/boards/nxp/common/freertos/: platform_os.c
platform/platform/boards/nxp/mimxrt1170-evkb-freertos/: platform_cache.cpp  platform_cache.h  platform_clock.c  platform_config.h  platform_context.cpp  platform_devicelink.cpp  platform_devicelink.h  platform_drawing.cpp  platform_drawing.h  platform_init.c  platform_irq.c  platform_irq.h  platform_layers.cpp  platform_layers.h  platform_memory.cpp  platform_memory.h  platform_os.h  platform_power.c  platform_power.h  platform_rng.cpp  platform_rng.h  platform_serial_console.cpp  platform_serial_console.h  platform_time.c  platform_time.h  platform_touch.cpp  platform_touch.h  platform_touch_c.h  vglitedrawingengine.cpp  vglitedrawingengine.h  vgliterotationcache.cpp  vgliterotationcache.h  vglitesupport.cpp  vglitesupport.h  vglitevector.h
platform/platform/boards/nxp/mimxrt1170-evkb-freertos/cmake/armgcc/: MIMXRT1176xxxxx_cm7_flexspi_nor_sdram.ld
platform/platform/boards/nxp/mimxrt1170-evkb-freertos/display/: platform_display.cpp  platform_display.h  vglitecontroller.c  vglitecontroller.h
platform/platform/common/: deviceinformationexchangeprotocol.pb.c  deviceinformationexchangeprotocol.pb.h  devicelink.cpp  platform.cpp  singlepointtoucheventdispatcher.cpp
platform/platform/common/freertos/: freertosqueue.cpp  mem-freertos-default.cpp  mem-freertos.cpp  mem_info.cpp
src/: FreeRTOSConfig.h  cpp_config.cpp  freertos_hello.cpp
ui_source/: AppBredge.qml  Daemon.qml  MCUDemo.cpp  MCUDemo.d  MCUDemo.fonts  MCUDemo.h  loader_item_allocator.cpp  qul_app_config.cpp  qul_app_config_screenrotation.cpp  qul_font_data.cpp  qul_font_engines.cpp
ui_source/config/: ControlsAssets.1.compiler_outputs.txt  ControlsAssets.1.inputs.txt  ControlsAssets.1.libraries.txt  MCUDemo.1.compiler_outputs.txt  MCUDemo.1.inputs.txt  MCUDemo.1.libraries.txt  input.json
ui_source/resources/: qul_resources_QulResourceData.txt  qulrcc_assets.cpp  qulrcc_lookup_data.cpp  qulrcc_pixelformat_info.cpp  qulrcc_qmlproject_output.json  qulrcc_qmlproject_resources.json  qulrcc_rasterbuffers.cpp  qulrcc_runtime_allocation_info.cpp
(+57 files in other folders)
