cmake_minimum_required (VERSION 3.21.1)
project(Qul LANGUAGES C CXX ASM)
add_library(Qt4MCUPlatform STATIC)
if (NOT QUL_DIR)
    set(QUL_DIR "/home/stvsl/Qt/QtMCUs/2.7.0")
endif ()
target_sources(Qt4MCUPlatform PRIVATE ${FREERTOS_DIR}/portable/MemMang/heap_4.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/gcc/startup_MIMXRT1176_cm7.S)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_DIR}/src/3rdparty/minihdlc/minihdlc.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_DIR}/src/3rdparty/nanopb/pb_common.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_DIR}/src/3rdparty/nanopb/pb_decode.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_DIR}/src/3rdparty/nanopb/pb_encode.c)
target_sources(Qt4MCUPlatform PRIVATE boards/nxp/common/freertos/platform_os.c)
target_sources(Qt4MCUPlatform PRIVATE boards/nxp/mimxrt1170-evkb-freertos/display/platform_display.cpp)
target_sources(Qt4MCUPlatform PRIVATE boards/nxp/mimxrt1170-evkb-freertos/display/vglitecontroller.c)
target_sources(Qt4MCUPlatform PRIVATE boards/nxp/mimxrt1170-evkb-freertos/platform_cache.cpp)
target_sources(Qt4MCUPlatform PRIVATE boards/nxp/mimxrt1170-evkb-freertos/platform_clock.c)
target_sources(Qt4MCUPlatform PRIVATE boards/nxp/mimxrt1170-evkb-freertos/platform_context.cpp)
target_sources(Qt4MCUPlatform PRIVATE boards/nxp/mimxrt1170-evkb-freertos/platform_devicelink.cpp)
target_sources(Qt4MCUPlatform PRIVATE boards/nxp/mimxrt1170-evkb-freertos/platform_drawing.cpp)
target_sources(Qt4MCUPlatform PRIVATE boards/nxp/mimxrt1170-evkb-freertos/platform_init.c)
target_sources(Qt4MCUPlatform PRIVATE boards/nxp/mimxrt1170-evkb-freertos/platform_irq.c)
target_sources(Qt4MCUPlatform PRIVATE boards/nxp/mimxrt1170-evkb-freertos/platform_layers.cpp)
target_sources(Qt4MCUPlatform PRIVATE boards/nxp/mimxrt1170-evkb-freertos/platform_memory.cpp)
target_sources(Qt4MCUPlatform PRIVATE boards/nxp/mimxrt1170-evkb-freertos/platform_power.c)
target_sources(Qt4MCUPlatform PRIVATE boards/nxp/mimxrt1170-evkb-freertos/platform_rng.cpp)
target_sources(Qt4MCUPlatform PRIVATE boards/nxp/mimxrt1170-evkb-freertos/platform_serial_console.cpp)
target_sources(Qt4MCUPlatform PRIVATE boards/nxp/mimxrt1170-evkb-freertos/platform_time.c)
target_sources(Qt4MCUPlatform PRIVATE boards/nxp/mimxrt1170-evkb-freertos/platform_touch.cpp)
target_sources(Qt4MCUPlatform PRIVATE boards/nxp/mimxrt1170-evkb-freertos/vglitedrawingengine.cpp)
target_sources(Qt4MCUPlatform PRIVATE boards/nxp/mimxrt1170-evkb-freertos/vgliterotationcache.cpp)
target_sources(Qt4MCUPlatform PRIVATE boards/nxp/mimxrt1170-evkb-freertos/vglitesupport.cpp)
target_sources(Qt4MCUPlatform PRIVATE common/deviceinformationexchangeprotocol.pb.c)
target_sources(Qt4MCUPlatform PRIVATE common/devicelink.cpp)
target_sources(Qt4MCUPlatform PRIVATE common/freertos/freertosqueue.cpp)
target_sources(Qt4MCUPlatform PRIVATE common/freertos/mem-freertos-default.cpp)
target_sources(Qt4MCUPlatform PRIVATE common/freertos/mem-freertos.cpp)
target_sources(Qt4MCUPlatform PRIVATE common/freertos/mem_info.cpp)
target_sources(Qt4MCUPlatform PRIVATE common/platform.cpp)
target_sources(Qt4MCUPlatform PRIVATE common/singlepointtoucheventdispatcher.cpp)
target_include_directories(Qt4MCUPlatform PUBLIC ${FREERTOS_DIR}/include)
target_include_directories(Qt4MCUPlatform PUBLIC ${FREERTOS_DIR}/portable/GCC/ARM_CM4F)
target_include_directories(Qt4MCUPlatform PUBLIC ${QUL_DIR}/include)
target_include_directories(Qt4MCUPlatform PUBLIC ${QUL_DIR}/src/3rdparty/minihdlc)
target_include_directories(Qt4MCUPlatform PUBLIC ${QUL_DIR}/src/3rdparty/nanopb)
target_include_directories(Qt4MCUPlatform PUBLIC ${QUL_DIR}/src/3rdparty/qoi)
target_include_directories(Qt4MCUPlatform PUBLIC boards/nxp/mimxrt1170-evkb-freertos)
target_include_directories(Qt4MCUPlatform PUBLIC boards/nxp/mimxrt1170-evkb-freertos/display)
target_include_directories(Qt4MCUPlatform PUBLIC common)
target_link_libraries(Qt4MCUPlatform PRIVATE ${QUL_DIR}/lib/libQulDeviceLink_mimxrt1170-evkb-freertos_Linux_armgcc_MinSizeRel.a)
target_compile_options(Qt4MCUPlatform PRIVATE -mthumb;-mapcs;-mcpu=cortex-m7;-mfloat-abi=hard;-mfpu=fpv5-d16;-fno-common;-ffunction-sections;-fdata-sections;-ffreestanding;-fno-builtin)
target_compile_options(Qt4MCUPlatform PRIVATE )
target_compile_options(Qt4MCUPlatform PRIVATE )
target_compile_options(Qt4MCUPlatform PRIVATE )
add_library(Qt4MCUPlatformDefaultLinkerScript INTERFACE)
target_link_options(Qt4MCUPlatformDefaultLinkerScript INTERFACE "SHELL:-T ${CMAKE_CURRENT_LIST_DIR}/boards/nxp/mimxrt1170-evkb-freertos/cmake/armgcc/MIMXRT1176xxxxx_cm7_flexspi_nor_sdram.ld")
set_target_properties(Qt4MCUPlatformDefaultLinkerScript PROPERTIES INTERFACE_LINK_DEPENDS "${CMAKE_CURRENT_LIST_DIR}/boards/nxp/mimxrt1170-evkb-freertos/cmake/armgcc/MIMXRT1176xxxxx_cm7_flexspi_nor_sdram.ld")
target_sources(Qt4MCUPlatform PRIVATE ${FREERTOS_DIR}/croutine.c)
target_sources(Qt4MCUPlatform PRIVATE ${FREERTOS_DIR}/event_groups.c)
target_sources(Qt4MCUPlatform PRIVATE ${FREERTOS_DIR}/list.c)
target_sources(Qt4MCUPlatform PRIVATE ${FREERTOS_DIR}/portable/GCC/ARM_CM4F/port.c)
target_sources(Qt4MCUPlatform PRIVATE ${FREERTOS_DIR}/queue.c)
target_sources(Qt4MCUPlatform PRIVATE ${FREERTOS_DIR}/stream_buffer.c)
target_sources(Qt4MCUPlatform PRIVATE ${FREERTOS_DIR}/tasks.c)
target_sources(Qt4MCUPlatform PRIVATE ${FREERTOS_DIR}/timers.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/boards/evkbmimxrt1170/xip/evkbmimxrt1170_flexspi_nor_config.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/components/gt911/fsl_gt911.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/components/lists/fsl_component_generic_list.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/components/serial_manager/fsl_component_serial_manager.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/components/serial_manager/fsl_component_serial_port_uart.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/components/uart/fsl_adapter_lpuart.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/components/video/display/dc/elcdif/fsl_dc_fb_elcdif.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/components/video/display/dc/lcdifv2/fsl_dc_fb_lcdifv2.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/components/video/display/fbdev/fsl_fbdev.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/components/video/display/hx8394/fsl_hx8394.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/components/video/display/mipi_dsi_cmd/fsl_mipi_dsi_cmd.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/components/video/display/rm68191/fsl_rm68191.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/components/video/display/rm68200/fsl_rm68200.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/components/video/fsl_video_common.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/drivers/fsl_anatop_ai.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/drivers/fsl_clock.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/drivers/fsl_common.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/drivers/fsl_common_arm.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/drivers/fsl_dcdc.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/drivers/fsl_elcdif.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/drivers/fsl_gpio.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/drivers/fsl_lcdifv2.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/drivers/fsl_lpi2c.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/drivers/fsl_lpuart.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/drivers/fsl_mipi_dsi.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/drivers/fsl_pmu.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/drivers/fsl_soc_src.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/system_MIMXRT1176_cm7.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/utilities/debug_console/fsl_debug_console.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/utilities/fsl_assert.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/utilities/fsl_sbrk.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/utilities/str/fsl_str.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/xip/fsl_flexspi_nor_boot.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/middleware/vglite/VGLite/rtos/vg_lite_os.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/middleware/vglite/VGLite/vg_lite.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/middleware/vglite/VGLite/vg_lite_image.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/middleware/vglite/VGLite/vg_lite_matrix.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/middleware/vglite/VGLite/vg_lite_path.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/middleware/vglite/VGLiteKernel/rtos/vg_lite_hal.c)
target_sources(Qt4MCUPlatform PRIVATE ${QUL_BOARD_SDK_DIR}/middleware/vglite/VGLiteKernel/vg_lite_kernel.c)
target_link_options(Qt4MCUPlatform PUBLIC -mapcs)
target_link_options(Qt4MCUPlatform PUBLIC -mcpu=cortex-m7)
target_link_options(Qt4MCUPlatform PUBLIC -mfloat-abi=hard)
target_link_options(Qt4MCUPlatform PUBLIC -mfpu=fpv5-d16)
target_link_options(Qt4MCUPlatform PUBLIC -mthumb)
target_sources(Qt4MCUPlatform PRIVATE "${FREERTOS_DIR}/croutine.c")
target_sources(Qt4MCUPlatform PRIVATE "${FREERTOS_DIR}/event_groups.c")
target_sources(Qt4MCUPlatform PRIVATE "${FREERTOS_DIR}/list.c")
target_sources(Qt4MCUPlatform PRIVATE "${FREERTOS_DIR}/portable/GCC/ARM_CM4F/port.c")
target_sources(Qt4MCUPlatform PRIVATE "${FREERTOS_DIR}/queue.c")
target_sources(Qt4MCUPlatform PRIVATE "${FREERTOS_DIR}/stream_buffer.c")
target_sources(Qt4MCUPlatform PRIVATE "${FREERTOS_DIR}/tasks.c")
target_sources(Qt4MCUPlatform PRIVATE "${FREERTOS_DIR}/timers.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/boards/evkbmimxrt1170/xip/evkbmimxrt1170_flexspi_nor_config.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/components/gt911/fsl_gt911.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/components/lists/fsl_component_generic_list.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/components/serial_manager/fsl_component_serial_manager.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/components/serial_manager/fsl_component_serial_port_uart.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/components/uart/fsl_adapter_lpuart.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/components/video/display/dc/elcdif/fsl_dc_fb_elcdif.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/components/video/display/dc/lcdifv2/fsl_dc_fb_lcdifv2.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/components/video/display/fbdev/fsl_fbdev.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/components/video/display/hx8394/fsl_hx8394.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/components/video/display/mipi_dsi_cmd/fsl_mipi_dsi_cmd.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/components/video/display/rm68191/fsl_rm68191.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/components/video/display/rm68200/fsl_rm68200.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/components/video/fsl_video_common.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/drivers/fsl_anatop_ai.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/drivers/fsl_clock.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/drivers/fsl_common.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/drivers/fsl_common_arm.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/drivers/fsl_dcdc.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/drivers/fsl_elcdif.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/drivers/fsl_gpio.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/drivers/fsl_lcdifv2.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/drivers/fsl_lpi2c.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/drivers/fsl_lpuart.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/drivers/fsl_mipi_dsi.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/drivers/fsl_pmu.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/drivers/fsl_soc_src.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/system_MIMXRT1176_cm7.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/utilities/debug_console/fsl_debug_console.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/utilities/fsl_assert.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/utilities/fsl_sbrk.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/utilities/str/fsl_str.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/devices/MIMXRT1176/xip/fsl_flexspi_nor_boot.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/middleware/vglite/VGLite/rtos/vg_lite_os.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/middleware/vglite/VGLite/vg_lite.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/middleware/vglite/VGLite/vg_lite_image.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/middleware/vglite/VGLite/vg_lite_matrix.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/middleware/vglite/VGLite/vg_lite_path.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/middleware/vglite/VGLiteKernel/rtos/vg_lite_hal.c")
target_sources(Qt4MCUPlatform PRIVATE "${QUL_BOARD_SDK_DIR}/middleware/vglite/VGLiteKernel/vg_lite_kernel.c")
